--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.0.5",
     "express": "^4.13.3",
     "pg": "^4.4.3"
   }
